stderr
ChristmasSong.java:20: error: missing return statement
    }
    ^
1 error
